--- a/app/src/main/res/layout/activity_help_screen.xml
+++ b/app/src/main/res/layout/activity_help_screen.xml
@@ -10,4 +10,60 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="uk.ucl.group21.currentviewapp.Help">
 
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true" android:layout_alignParentStart="true">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:text="@string/Help_Title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="30sp"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="Creating a new Questionnaire"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="To start a new questionnaire, first click on the Qustionnaire Menu button. In the questionnaire main menu you can then chose to start a new questionnaire with the Section by Section method or with the Overview."
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView7"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="Looking at previous Questionnaires"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView8"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView9"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="Step 3."
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView10"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView11"/>
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
