--- a/app/src/main/res/layout/activity_help_screen.xml
+++ b/app/src/main/res/layout/activity_help_screen.xml
@@ -28,42 +28,36 @@
             <TextView
                     android:text="@string/creating_a_new_questionnaire"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
+                    android:layout_height="wrap_content" android:id="@+id/textView6"
+                    android:textAppearance="@android:style/TextAppearance.Holo.Large" android:textAlignment="viewStart"/>
             <Space
                     android:layout_width="match_parent"
                     android:layout_height="20dp"/>
             <TextView
                     android:text="@string/Creating_New_Questionnaire_Help"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView7"/>
+                    android:layout_height="wrap_content" android:id="@+id/textView7"
+                    android:textAppearance="@android:style/TextAppearance.Holo"
+            />
             <Space
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
+                    android:layout_height="40dp"/>
             <TextView
                     android:text="@string/looking_at_previous_questionnaires"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView8"/>
+                    android:layout_height="wrap_content" android:id="@+id/textView8"
+                    android:textAppearance="@android:style/TextAppearance.Holo.Large"/>
             <Space
                     android:layout_width="match_parent"
                     android:layout_height="20dp"/>
             <TextView
-                    android:text="TextView"
+                    android:text="@string/help_previous_questionnaires"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView9"/>
+                    android:layout_height="wrap_content" android:id="@+id/textView9"
+                    android:textAppearance="@android:style/TextAppearance.Holo"/>
             <Space
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
-            <TextView
-                    android:text="Step 3."
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView10"/>
-            <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView11"/>
+                    android:layout_height="40dp"/>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
