--- a/app/src/main/res/layout/activity_questionnaire_details_screen.xml
+++ b/app/src/main/res/layout/activity_questionnaire_details_screen.xml
@@ -115,19 +115,11 @@
         android:layout_marginTop="30dp"
         android:text="@string/reason_of_completing_this_form"
         android:textSize="24sp" />
-    <EditText
-        android:id="@+id/editText_REASONofCOMPLETING"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:layout_below="@+id/txtReasonComplete"
-        android:layout_alignStart="@+id/txtReasonComplete"
-        android:layout_marginRight="25dp" />
 
 
     <!-- Additional Resources-->
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Section By Section"
@@ -138,13 +130,13 @@
         android:onClick="btnSectionBySection" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnOverview"
         android:layout_height="wrap_content"
         android:text="Overview"
         android:layout_marginEnd="16dp"
-        android:layout_alignBaseline="@+id/button"
-        android:layout_alignBottom="@+id/button"
-        android:layout_toStartOf="@+id/button"
+        android:layout_alignBaseline="@+id/btnSection"
+        android:layout_alignBottom="@+id/btnSection"
+        android:layout_toStartOf="@+id/btnSection"
         android:layout_width="wrap_content"
         android:minWidth="120dp"
         android:onClick="btnOverview" />
@@ -166,5 +158,14 @@
         android:layout_alignTop="@+id/txtDOB"
         android:layout_toRightOf="@+id/txtDOB"
         android:layout_marginRight="25dp"/>
+
+    <EditText
+        android:id="@+id/editText_REASONofCOMPLETING"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:layout_marginRight="25dp"
+        android:layout_below="@+id/txtReasonComplete"
+        android:layout_alignStart="@+id/txtReasonComplete" />
 
 </RelativeLayout>
