--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -14,14 +14,6 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Login Complete"
-            android:id="@+id/systemMessage"
-            android:layout_below="@+id/textView" android:layout_centerHorizontal="true"
-            android:layout_marginTop="88dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/Username"
             android:id="@+id/textView"
@@ -39,7 +31,7 @@
             android:text="@string/Setting"
             android:id="@+id/btnSetting"
             android:onClick="btnSetting"
-            android:layout_alignBottom="@+id/btnHelp" android:layout_alignParentEnd="true"/>
+            android:layout_alignBottom="@+id/btnHelp" android:layout_alignParentEnd="true" android:clickable="false"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
