--- a/app/src/main/res/layout/activity_help_screen.xml
+++ b/app/src/main/res/layout/activity_help_screen.xml
@@ -10,4 +10,54 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="uk.ucl.group21.currentviewapp.Help">
 
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true" android:layout_alignParentStart="true">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:text="@string/Help_Title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="30sp"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="@string/creating_a_new_questionnaire"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView6"
+                    android:textAppearance="@android:style/TextAppearance.Holo.Large" android:textAlignment="viewStart"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="@string/Creating_New_Questionnaire_Help"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView7"
+                    android:textAppearance="@android:style/TextAppearance.Holo"
+            />
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"/>
+            <TextView
+                    android:text="@string/looking_at_previous_questionnaires"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView8"
+                    android:textAppearance="@android:style/TextAppearance.Holo.Large"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"/>
+            <TextView
+                    android:text="@string/help_previous_questionnaires"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView9"
+                    android:textAppearance="@android:style/TextAppearance.Holo"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"/>
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
